--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                 </li>
                                 <li><a href="services.html">Services<span></span></a>
                                 </li>
-                                <li><a href="gallery.html">Gallery<span></span></a>
+                                <li><a href="portfolio.html">Portfolio<span></span></a>
                                 </li>
                                
                               
