--- a/portfolio.html
+++ b/portfolio.html
@@ -119,6 +119,14 @@
     text-decoration: none;
 }
 
+/* Media Query for Mobile Devices */
+@media (max-width: 768px) {
+    .content {
+        padding-top: 250px;
+        padding-left: 20px;
+    }
+}
+
 
 
 </style>
@@ -182,7 +190,7 @@
 <!-- banner section begin  -->
         <div class="container cntr">
             <div class="row">
-                <div class="col-md-12 col-sm 6 ctr">
+                <div class="col-md-12 ctr">
                     <h2>Portfolio</h2>
                     <p>Diverse Indutries. Common Chellenges</p>
                     <button>Get a Free Proposal</button>
