--- a/portfolio.html
+++ b/portfolio.html
@@ -122,8 +122,14 @@
 /* Media Query for Mobile Devices */
 @media (max-width: 768px) {
     .content {
-        padding-top: 250px;
+        padding-top: 220px;
         padding-left: 20px;
+    }
+    .content h4{
+        font-size: 18px;
+    }
+    .content p{
+        font-size: 15px;
     }
 }
 
